--- a/trettin_benjamin.assignment-1.09/Makefile
+++ b/trettin_benjamin.assignment-1.09/Makefile
@@ -1,5 +1,5 @@
-All: mapInit.cpp
-	g++ -Wall -g -O -c mapInit.cpp -lncurses
+All: map.cpp
+	g++ -Wall -g -O -c map.cpp -lncurses
 	g++ -Wall -g -O -c heap.cpp -lncurses
 	g++ -Wall -g -O -c monster.cpp -lncurses
 	g++ -Wall -g -O -c pcio.cpp -lncurses
@@ -10,7 +10,7 @@ All: mapInit.cpp
 	g++ -Wall -g -O -c monsterFactory.cpp
 	g++ -Wall -g -O -c objectManager.cpp	
 	ar -cvq heap.a heap.o 
-	ar -cvq gameMap.a mapInit.o monster.o pcio.o knowledgeMap.o npcParser.o objectParser.o dice.o monsterFactory.o objectManager.o
-	g++ -Wall -O0 -ggdb dungeonGame327.cpp -o ShaneDrafahl gameMap.a heap.a -lncurses 
-Clean: ShaneDrafahl gameMap.a mapInit.o
+	ar -cvq gameMap.a map.o monster.o pcio.o knowledgeMap.o npcParser.o objectParser.o dice.o monsterFactory.o objectManager.o
+	g++ -Wall -O0 -ggdb main.cpp -o run gameMap.a heap.a -lncurses 
+Clean: run gameMap.a map.o
 	bash cleanSlate.bash
